--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.0.0",
     "@next/third-parties": "^15.4.4",
     "@prisma/client": "^6.12.0",
+    "@stripe/stripe-js": "^7.8.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.0",
     "@types/bcryptjs": "^2.4.6",
@@ -40,6 +41,7 @@
     "react-hot-toast": "^2.5.2",
     "recharts": "^3.1.0",
     "sharp": "^0.32.0",
+    "stripe": "^18.4.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0"
   },
